put script in html for ease

--- a/index.html
+++ b/index.html
@@ -7,23 +7,107 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>wikipediacrawler</title>
-    <script type="text/javascript" src="sketch.js"></script>
-
 </head>
 
 <body>
     <h1 id="count">Count</h1>
     <h2>Wikipedia Crawler</h2>
     <p>
-        Input a word then input another word and the program will go 
+        Input a word then input another word and the program will go
         through wikipedia from the first word until it randomly selects the second.
     </p>
 
     <p>
-        word 1: <input id="userinput" value="1st Term"/>
-        word 2: <input id="userinput2" value="2nd Term"/>
+        word 1: <input id="userinput" value="1st Term" />
+        word 2: <input id="userinput2" value="2nd Term" />
     </p>
     <button onclick="startSearch()">Start the Search!</button>
 </body>
 
 </html>
+
+<script>
+    let searchUrl =
+        'https://en.wikipedia.org/w/api.php?action=opensearch&format=json&search=';
+    let contentUrl =
+        'https://en.wikipedia.org/w/api.php?action=query&prop=revisions&rvprop=content&format=json&titles=';
+
+    let userInput;
+
+    let counter = 0;
+
+    function startSearch() {
+        try {
+            userInput = document.getElementById('userinput');
+            userInput2 = document.getElementById('userinput2');
+            if (userInput.value === userInput2.value) {
+                return;
+            }
+            counter = 0;
+            console.log(userInput.value)
+            fetchWikipedia(userInput.value);
+        }
+        catch {
+            startSearch();
+        }
+    }
+
+    function fetchWikipedia(term) {
+        try {
+            counter++;
+            document.getElementById('count').innerHTML = counter;
+            let url = searchUrl + term;
+            fetch(url + "&origin=*")
+                .then(res => res.json())
+                .then(result => {
+                    useWikipedia(result);
+                });
+        }
+        catch {
+            startSearch();
+        }
+    }
+
+    function useWikipedia(data) {
+        try {
+            console.log(data);
+            let len = data[1].length;
+            let index = Math.floor(Math.random() * (len - 1) + 1);
+            console.log(index);
+            let title = data[1][index];
+            let label = document.createElement("label");
+            label.innerHTML = title;
+            let breakLine = document.createElement("br");
+            document.getElementsByTagName('body')[0].appendChild(breakLine);
+            document.getElementsByTagName('body')[0].appendChild(label);
+            console.log('Querying: ' + title);
+            let url = contentUrl + title;
+            fetch(url + "&origin=*")
+                .then(res => res.json())
+                .then(result => {
+                    doAgain(result);
+                });
+        }
+        catch {
+            startSearch();
+        }
+    }
+
+    function doAgain(data) {
+        try {
+            let page = data.query.pages;
+            let pageId = Object.keys(data.query.pages)[0];
+            console.log(pageId);
+            let content = page[pageId].revisions[0]['*'];
+            console.log(content);
+            let wordRegex = /\b\w{4,}\b/g;
+            let words = content.match(wordRegex);
+            let word = words[Math.floor(Math.random() * words.length)];
+            fetchWikipedia(word);
+            console.log(word);
+        }
+        catch {
+            startSearch();
+        }
+    }
+</script>
